# smiles-segmentation

./: .gitignore  01_exploration.ipynb  01_explore_dataset.ipynb  02_predict.ipynb  README.md  predict.py  pyproject.toml  register_dataset.py  train.py
rendering/: generate_dataset.py  molecules.py
rendering/smiles/: coco.py  images.py  options.py  postprocessing.py  renderer.py
rendering/smiles_segmentation/: __init__.py  coco.py  images.py  options.py  postprocessing.py  renderer.py
segmentation/: 02_train.py  02b_train.py  03_predict.py  config.py  exploration.ipynb  predict.py  register_dataset.py  train.py
segmentation/slurm_jobs/: gpu-training.sh
slurm-jobs/: gpu-training.sh
